--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "seed": "ts-node src/seed/seed-database.ts"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/client": "^5.5.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.0.0",
     "next": "14.0.1",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.11.0",
     "swiper": "^11.0.3",
+    "zod": "^3.24.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
